<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/statement4people"
        android:orderInCategory="100"
        android:title="@string/statement4people"
        app:showAsAction="never" />

    <item
        android:id="@+id/charity_statement"
        android:orderInCategory="100"
        android:title="@string/ch_statement"
        app:showAsAction="never" />
    <item
        android:id="@+id/bank_statement"
        android:orderInCategory="100"
        android:title="@string/statementbank"
        app:showAsAction="never" />

    <item
        android:id="@+id/farm_statement"
        android:orderInCategory="100"
        android:title="@string/farm4hire_statement"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
