<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_activity_send_to_many"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_countdown_timer">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="60dp">

        <TextView
            android:id="@+id/coming_soon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Coming Soon"
            android:textColor="@color/mangu_red"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/days"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:background="@drawable/reounded_textview"
                android:gravity="center"
                android:text="300"
                android:textColor="@color/mangu_red"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hours"
                android:layout_marginStart="8dp"
                android:text="@string/days"
                android:textSize="30dp" />

        </LinearLayout>

        <view
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/black"></view>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/hours"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:background="@drawable/reounded_textview"
                android:gravity="center"
                android:text="45"
                android:textColor="@color/mangu_red"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/hours"
                android:textSize="30dp" />

        </LinearLayout>

        <view
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/black"></view>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/minute"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:background="@drawable/reounded_textview"
                android:gravity="center"
                android:text="30"
                android:textColor="@color/mangu_red"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hours"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/minutes"
                android:textSize="30dp" />

        </LinearLayout>

        <view
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/black"></view>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/seconds"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:background="@drawable/reounded_textview"
                android:gravity="center"
                android:text="30"
                android:textColor="@color/mangu_red"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/seconds"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/seconds"
                android:textSize="30dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/textsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="SIGN UP HERE TO BE NOTIFIED TO WHEN ITS READY" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress" />

    </LinearLayout>

</RelativeLayout>